--- a/Churn.ipynb
+++ b/Churn.ipynb
@@ -1714,8 +1714,8 @@
    "outputs": [],
    "source": [
     "#defining dependent and independent variables\n",
-    "x = ds.iloc[:, :-1].values\n",
-    "y = ds.iloc[:, -1].values"
+    "x = ds.iloc[:, :-1]\n",
+    "y = ds.iloc[:, -1]"
    ]
   },
   {
